// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  name      String   @db.VarChar(100)
  surname   String   @db.VarChar(100)
  email     String   @unique @db.VarChar(255)
  password  String   @db.VarChar(255)
  role      String   @default("USER") @db.VarChar(20)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  
  // Relations
  trips     Trip[]
  expenses  Expense[]
  
  @@map("users")
  @@index([email])
}

model Trip {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId      Int      @map("user_id")
  title       String   @db.VarChar(255)
  dateFrom    DateTime @map("date_from") @db.Date
  dateTo      DateTime @map("date_to") @db.Date
  country     String   @db.VarChar(100)
  tripType    Json?    @map("trip_type") @db.JsonB
  tags        Json?    @db.JsonB
  budget      String?  @db.VarChar(50)
  description String?  @db.Text
  image       String?  @default("/public/assets/mountains.jpg") @db.VarChar(255)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @default(now()) @updatedAt @map("updated_at")
  
  // Relations
  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  expenses     Expense[]
  packingItems PackingItem[]
  todoItems    TodoItem[]
  
  @@map("trips")
  @@index([userId])
}

model ExpenseCategory {
  id        Int       @id @default(autoincrement())
  name      String    @unique @db.VarChar(100)
  icon      String?   @db.VarChar(50)
  color     String?   @db.VarChar(20)
  createdAt DateTime  @default(now()) @map("created_at")
  
  // Relations
  expenses  Expense[]
  
  @@map("expense_categories")
}

model Expense {
  id          String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tripId      String          @map("trip_id") @db.Uuid
  categoryId  Int             @map("category_id")
  userId      Int             @map("user_id")
  amount      Decimal         @db.Decimal(10, 2)
  currency    String          @default("USD") @db.VarChar(3)
  description String?         @db.Text
  expenseDate DateTime        @map("expense_date") @db.Date
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @default(now()) @updatedAt @map("updated_at")
  
  // Relations
  trip        Trip            @relation(fields: [tripId], references: [id], onDelete: Cascade)
  category    ExpenseCategory @relation(fields: [categoryId], references: [id])
  user        User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@map("expenses")
  @@index([tripId])
  @@index([categoryId])
  @@index([userId])
}

model PackingCategory {
  id           Int           @id @default(autoincrement())
  name         String        @unique @db.VarChar(100)
  icon         String?       @db.VarChar(50)
  createdAt    DateTime      @default(now()) @map("created_at")
  
  // Relations
  packingItems PackingItem[]
  
  @@map("packing_categories")
}

model PackingItem {
  id         String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tripId     String          @map("trip_id") @db.Uuid
  categoryId Int             @map("category_id")
  name       String          @db.VarChar(255)
  quantity   Int             @default(1)
  isPacked   Boolean         @default(false) @map("is_packed")
  priority   String          @default("medium") @db.VarChar(20)
  createdAt  DateTime        @default(now()) @map("created_at")
  updatedAt  DateTime        @default(now()) @updatedAt @map("updated_at")
  
  // Relations
  trip       Trip            @relation(fields: [tripId], references: [id], onDelete: Cascade)
  category   PackingCategory @relation(fields: [categoryId], references: [id])
  
  @@map("packing_items")
  @@index([tripId])
  @@index([categoryId])
}

model TodoItem {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tripId      String   @map("trip_id") @db.Uuid
  title       String   @db.VarChar(255)
  description String?  @db.Text
  dueDate     DateTime? @map("due_date") @db.Date
  isCompleted Boolean  @default(false) @map("is_completed")
  priority    String   @default("medium") @db.VarChar(20)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @default(now()) @updatedAt @map("updated_at")
  
  // Relations
  trip        Trip     @relation(fields: [tripId], references: [id], onDelete: Cascade)
  
  @@map("todo_items")
  @@index([tripId])
}

